    - fix python-apt 0.8 API crash

  [ Stéphane Graber ]
  * Drop fdsend as it's not used and doesn't build with python3.
  * Make update-manager-core a binary all packages (everything is python).
  * Split update-manager-core into python-update-manager,
    python3-update-manager and update-manager-core.
  * Build-depend and depend on python-apt >= 0.8.5~ as we need proper
    python3 support.

 -- Colin Watson <cjwatson@ubuntu.com>  Mon, 11 Jun 2012 11:46:37 +0100

update-manager (1:0.162) quantal; urgency=low

  * DistUpgrade/build-tarball.sh:
    - include "DistUpgrade" symlink in tarball to ensure relative
      imports keep working

 -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 04 Jun 2012 14:27:50 +0200

update-manager (1:0.161) quantal; urgency=low

  * /usr/share/nvidia-common/obsolete was renamed to
    /usr/share/ubuntu-drivers-common/obsolete and moved packages.  Cope with
    this.

 -- Colin Watson <cjwatson@ubuntu.com>  Fri, 01 Jun 2012 20:53:46 +0100

update-manager (1:0.160) quantal; urgency=low

  [ Colin Watson ]
  * Use Python 3-style print functions.
  * Use "except Exception as e" syntax rather than the old-style "except
    Exception, e".
  * Fix a few assorted pyflakes warnings.
  * Use string methods rather than functions from the string module.
  * Replace most uses of filter and map with list comprehensions or for
    loops.
  * Use open() rather than file().
  * Use Python 3 renaming of ConfigParser if available.
  * Use "raise Exception(value)" syntax rather than the old-style "raise
    Exception, value".
  * Remove duplicate imports of os.path; 'import os' is enough.
  * Use Python 3 renamings of urllib, urllib2, and urlparse if available.
  * Remove all hard tabs from Python code.  Python 3 no longer tolerates
    mixing tabs and spaces for indentation.
  * Use Python 3 renaming of httplib if available.
  * Use email.utils.parsedate (with a DST handling correction) rather than
    the long-deprecated rfc822.parsedate.