@@ -92,6 +92,10 @@ update-manager (1:0.163) UNRELEASED; urgency=low
   * Build-depend and depend on python-apt >= 0.8.5~ as we need proper
     python3 support.
 
+  [ Steve Langasek ]
+  * tests/test_country_mirror.py: the test suite shouldn't fail if $LANG
+    isn't set in the environment.
+
  -- Colin Watson <cjwatson@ubuntu.com>  Mon, 11 Jun 2012 11:46:37 +0100
 
 update-manager (1:0.162) quantal; urgency=low
